[package]
name = "qemu_virtio_example"
version = "0.1.0"
edition = "2021"

[dependencies]
RVlwext4 = { path = "../.." }
virtio-drivers = "0.7"
spin = "0.9"
log = "0.4"
buddy_system_allocator = "0.9"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
panic = "abort"


[profile.dev]
panic = "abort"

